Add module dynamically. This avoids restarting the server with a ProcessBuilder.